# target-s3parquet

./: README.md  meltano.yml  pyproject.toml  target-s3-parquet.sh
target_s3parquet/: athena.py  data_type_generator.py  sanitizer.py  sinks.py  target.py
target_s3parquet/tests/: __init__.py  test_core.py  test_data_transformation.py  test_data_type_generator.py
