[tool.poetry]
name = "target-s3parquet"
version = "0.0.1"
description = "`target-s3parquet` is a Singer target for s3parquet, built with the Meltano Singer SDK."
authors = ["Daniel Antwi"]
keywords = [
    "ELT",
    "s3parquet",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
requests = "^2.28.1"
boto3 = "^1.17.64"
awswrangler = "2.19.0"
pandas = "1.5.1"
singer-sdk = { version="^0.17.0"}
fs-s3fs = { version = "^1.1.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
#python-dotenv = "^0.17.1"
flake8 = "^3.9.2"
black = "^22.12.0"
pydocstyle = "^6.2.1"
mypy = "^0.991"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_s3parquet"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-s3parquet = 'target_s3parquet.target:Targets3parquet.cli'
